# OpenGL_Basic

./: .gitignore  CMakeLists.txt  main.cpp
application/: CMakeLists.txt  application.cpp
application/include/: application.h
assets/shaders/: frag.frag  vertex.vert
camera/: CMakeLists.txt  camera.cpp  cameracontrol.cpp  orthographicCamera.cpp  perspectiveCamera.cpp  trackballcameracontrol.cpp
camera/include/: camera.h  cameracontrol.h  orthographicCamera.h  perspectiveCamera.h  trackballcameracontrol.h
glframework/: CMakeLists.txt  shader.cpp  texture.cpp
glframework/include/: core.h  shader.h  texture.h
wrapper/: CMakeLists.txt  checkerror.cpp
wrapper/include/: checkerror.h
